# etcetera

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: app_strategy.rs  base_strategy.rs  lib.rs  strategy.rs
src/app_strategy/: apple.rs  unix.rs  windows.rs  xdg.rs
src/base_strategy/: apple.rs  windows.rs  xdg.rs
src/strategy/: app.rs
