[package]
categories = ["config"]
description = "An unopinionated library for obtaining configuration, data, cache, & other directories"
documentation = "https://docs.rs/etcetera"
edition = "2018"
homepage = "https://github.com/lunacookies/etcetera"
keywords = ["xdg", "dirs", "directories", "basedir", "path"]
license = "MIT OR Apache-2.0"
name = "etcetera"
readme = "README.md"
repository = "https://github.com/lunacookies/etcetera"
rust-version = "1.54.0"
version = "0.8.0"

[dependencies]
cfg-if = "1"
home = "0.5"

# We should keep this in sync with the `home` crate.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Com", "Win32_UI_Shell"] }
