[package]
name = "etcetera"
version = "0.9.0"
categories = ["config"]
documentation = "https://docs.rs/etcetera"
edition = "2021"
homepage = "https://github.com/lunacookies/etcetera"
keywords = ["xdg", "dirs", "directories", "basedir", "path"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lunacookies/etcetera"
rust-version = "1.70.0"
description = "An unopinionated library for obtaining configuration, data, cache, & other directories"

[dependencies]
cfg-if = "1"
home = ">=0.5,<0.5.11"

# We should keep this in sync with the `home` crate.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Com", "Win32_UI_Shell"] }
